# dr-db

./: .env.example  AGENTS.md  README.md  compose.yml  docker-compose.yml  docker.mathesar.yaml  pyproject.toml  session_config.py
db/migrations/: 000_core.sql  001_core_tables.sql  002_training_dbs_common_schema.sql
docker/postgres/init/: 10-create-dr-db.sh
docs/: dev-postgres-plan.md
scripts/: clone-prod-to-dev.sh  ensure-docker-storage.ps1  ensure-docker-storage.sh  fetch_aind_subject_example.py  fetch_aind_subjects.py  import_training_dbs.py  reset-docker-storage.sh
sql/: 001_core_tables.sql  002_training_dbs_common_schema.sql
src/dr_db/: __init__.py  config.py
tests/: test_fetch_aind_subjects.py
training_dbs/: DynamicRoutingTraining.sqlite  DynamicRoutingTrainingNSB.sqlite  aind_subject_metadata.json  subject.json
