[project]
name = "dr-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.1",
    "polars[excel]>=1.40.1",
    "psycopg[binary]>=3.2",
    # "psycopg2-binary==2.9.5",
    "aind-data-access-api>=1.6.0",
    "dotenv>=0.9.9",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
